test/files/neg/t7685.scala
final class Foo(val value: Foo) extends AnyVal
