test/files/neg/t7685.check
t7685.scala:1: error: value class may not unbox to itself
final class Foo(val value: Foo) extends AnyVal
            ^
one error found
